--- a/assets/www/program_rules.htm
+++ b/assets/www/program_rules.htm
@@ -75,33 +75,36 @@ ul
 style='font-size:11.0pt;color:black'>KICKBAK CUSTOMER REWARDS PROGRAM RULES</span></u></b></p>
 
 <p class=MsoNormal><b><span style='font-size:11.0pt;color:black'>Please read
-these Kickbak Customer Rewards Program Rules (the “Program Rules”) carefully
+these Kickbak Customer Rewards Program Rules (the Program Rules) carefully
 before accessing, using, or registering for membership in the Kickbak Customer Rewards
-Program (the “Program”).&nbsp; By accessing, using, or registering for the
+Program (the Program).&nbsp; By accessing, using, or registering for the
 Program, you agree to be bound by the terms and conditions set forth below, as
 if you had actually signed them. If you do not agree to the terms and
 conditions set forth below, you may not use the Program.</span></b></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;color:black'>The Program is a
 customer rewards program offered by GetKickbak Inc., its subsidiaries and
-affiliates (“<b>Kickbak</b>”) to customers of participating merchant vendors
-(the “<b>Vendors</b>” or each individually a “<b>Vendor</b>”) which came into
+affiliates (<b>Kickbak</b>) to customers of participating merchant vendors
+(the <b>Vendors</b> or each individually a <b>Vendor</b>) which came into
 effect on Aug 15, 2012.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>To participate in the Program,
-an individual must be a member of the Program (a “<b>Program Member</b>” or “<b>Member</b>”).
-Program membership is granted in Kickbak’s sole discretion, and may be
-withdrawn in Kickbak’s sole discretion with or without notification. An
-application for enrolment in the Program must be completed via the Kickbak
-Customer Rewards Program Application (the “<b>Customer App</b>”), found at <a
-href="http://www.getkickbak.com/download">www.getkickbak.com/download</a>. Only
+an individual must be a member of the Program (a <b>Program Member</b> or <b>Member</b>).
+Program membership is granted in Kickbaks sole discretion, and may be
+withdrawn in Kickbaks sole discretion with or without notification. An
+application for enrolment in the Program must be completed via the Kickbak Customer Website
+(the <b>Customer Website</b>) found at <a href="http://www.getkickbak.com">www.getkickbak.com</a>
+or the Kickbak Customer Rewards Program Application (the <b>Customer App</b>), 
+found at <a href="http://www.getkickbak.com/download">www.getkickbak.com/download</a>. 
+A customer can choose to participate in the Program by using a Kickbak Customer Card (the Customer Card)
+or the Customer App. The Customer Card can be obtained at any participating stores. Only
 one Program membership is available per customer.&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>A Member must hold a valid
-user account (“<b>User Account</b>”) with Kickbak. A User Account can be
-obtained at no charge by registration on the Customer App.&nbsp; Only an
+user account (<b>User Account</b>) with Kickbak. A User Account can be
+obtained at no charge by registration on the Customer Website or Customer App.&nbsp; Only an
 individual consumer may be a Member unless written approval is received in
 advance from Kickbak.&nbsp;</span></p>
 
@@ -111,14 +114,14 @@ may modify the terms and conditions of the Program Rules as described below,
 and you agree to familiarize yourself with any modifications.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>Every time a Member makes a
-purchase from a Vendor, the Member will earn one reward point (“<b>Reward Points</b>”)
+purchase from a Vendor, the Member will earn one reward point (<b>Reward Points</b>)
 per dollar (before tax) paid by the Member to the Vendor. </span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>In addition to earning of
 Reward Points, a Member may from time to time earn the right to participate in
-a challenge (“<b>Challenge</b>”). A Challenge may give the Member the
+a challenge (<b>Challenge</b>). A Challenge may give the Member the
 opportunity to earn additional Reward Points. The opportunity to participate in
 a Challenge will be determined in the sole discretion of Kickbak, and Kickbak
 does not guarantee that a Challenge will be made available under any specific
@@ -127,52 +130,52 @@ circumstances. </span></p>
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>Reward Points may be used to
-purchase Kickbak rewards (“<b>Rewards</b>”). The rewards structure for Rewards
-is available in the Customer App for each participating merchant vendor.</span></p>
-
-<p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
-
-<p class=MsoNormal><span style='font-size:11.0pt'>In addition to the Reward
-Points earned, every time a Member makes a purchase from a Vendor, the Member may
-be eligible to earn one or more prize points (“<b>Prize Points</b>”). Prize
-Points will be assigned in the sole discretion of Kickbak, and Kickbak does not
-guarantee that Prize Points will be awarded in any specific transaction. </span></p>
+purchase Kickbak rewards (<b>Rewards</b>). The rewards structure for Rewards
+is available in the Customer Website or Customer App for each participating merchant vendor.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>A Member may from time to
-time earn a badge (“<b>Badge</b>”) or Badges based on repeated visits to the
+time earn a badge (<b>Badge</b>) or Badges based on repeated visits to the
 same Vendor. Each Badge earned by a Member may be redeemed by the Member for an
-undetermined amount of Prize Points. Badges will be assigned in the sole
+undetermined amount of Reward Points. Badges will be assigned in the sole
 discretion of Kickbak, and Kickbak does not guarantee that Badges will be
 awarded in any specific transaction. </span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
+<p class=MsoNormal><span style='font-size:11.0pt'>In addition to the Reward
+Points earned, every time a Member makes a purchase from a Vendor, the Member may
+be eligible to earn one or more prize points (<b>Prize Points</b>). Prize
+Points will be assigned in the sole discretion of Kickbak, and Kickbak does not
+guarantee that Prize Points will be awarded in any specific transaction. </span></p>
+
+<p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
+
 <p class=MsoNormal><span style='font-size:11.0pt'>Prize Points may be used to
-purchase Kickbak Prizes (“<b>Prizes</b>”). The prize structure for Prizes is available
-in the Customer App for each participating merchant vendor.</span></p>
+purchase Kickbak Prizes (<b>Prizes</b>). The prize structure for Prizes is available
+in the Customer Webiste or Customer App for each participating merchant vendor.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>Reward Points and Prize
 Points may be redeemed for Rewards and Prizes, respectively, through the
-Customer App. Reward Points and Prize Points may not be redeemed for Rewards or
+Customer Card or Customer App. Reward Points and Prize Points may not be redeemed for Rewards or
 Prizes in writing, by telephone, or by any means other than through use of the Customer
-App. </span></p>
+Card or Customer App. </span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>The rewards structure for
 Reward Points and the prize structure for Prize Points are subject to
-modification, cancellation, or limitation at Kickbak’s sole discretion, with or
+modification, cancellation, or limitation at Kickbaks sole discretion, with or
 without notice. The number of Reward Points or Prize Points required to redeem
 any Reward or Prize may be increased, any reward or prize may be withdrawn, and
 restrictions on any Reward or Prize or the redemption thereof may be imposed at
 any time. Information regarding the rewards structure for Rewards Points and
-the prize structure for Prize Points will be made available in the Customer App.
-Awards and Prizes are limited in quantity, and may not be available even if
-listed as available in the Customer App.</span></p>
+the prize structure for Prize Points will be made available in the Customer Website or 
+Customer App. Awards and Prizes are limited in quantity, and may not be available even if
+listed as available in the Customer Webiste or Customer App.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
@@ -200,27 +203,27 @@ redeemable for offered Rewards or Prizes through the Program.</span></p>
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>In the event that a Vendor
-decides to terminate that Vendor’s participation in the Program, Members will
+decides to terminate that Vendors participation in the Program, Members will
 have 30 days or more to redeem their Rewards or Prizes from the date they are
-notified of such decision by the Vendor to terminate the Vendor’s participation
+notified of such decision by the Vendor to terminate the Vendors participation
 in the Program. </span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
-<p class=MsoNormal><span style='font-size:11.0pt'>If in Kickbak’s sole opinion,
-a Member abuses any of the Program’s privileges, fails to follow any of its
+<p class=MsoNormal><span style='font-size:11.0pt'>If in Kickbaks sole opinion,
+a Member abuses any of the Programs privileges, fails to follow any of its
 terms and conditions, or makes any misrepresentation to Kickbak or to a Vendor,
 Kickbak may, in its sole discretion, revoke any or all of the Reward Points or
-Prize Points associated with the User Account, and/or revoke the Member’s
+Prize Points associated with the User Account, and/or revoke the Members
 membership in the Program, with or without notification.&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>Kickbak reserves the right to
-adjust a Member’s Reward Points or Prize Points balance to correct any errors
+adjust a Members Reward Points or Prize Points balance to correct any errors
 in the awarding of Reward Points or Prize Points, including errors caused by
 use of the Program by Members, administration of the program by Vendors, or
-administration of the Program by Kickbak, including errors caused by Kickbak’s
+administration of the Program by Kickbak, including errors caused by Kickbaks
 own negligence.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
@@ -237,15 +240,15 @@ discretion to interpret and apply the Program Rules.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>Where notice is given
 pursuant to any section of these terms and conditions, it will be via email to
-the email address associated with the Member’s User Account, or via a notice
-posted on Kickbak’s website, found at <a href="http://www.getkickbak.com/terms">www.getkickbak.com/terms</a>.&nbsp;</span></p>
+the email address associated with the Members User Account, or via a notice
+posted on Kickbaks website, found at <a href="http://www.getkickbak.com/terms">www.getkickbak.com/terms</a>.&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>A Member may obtain his or
-her balances of Reward Points or Prize Points only through the Customer App. Kickbak
-will not provide balances of Reward Points or Prize Points in writing, by
-telephone or through any other medium than through Kickbak’s website or the
+her balances of Reward Points or Prize Points only through the Customer Website or
+Customer App. Kickbak will not provide balances of Reward Points or Prize Points in writing, by
+telephone or through any other medium than through the Customer Website or the
 Customer App.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
@@ -302,9 +305,9 @@ or her rights, responsibilities, and status in the Program.&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
-<p class=MsoNormal><span style='font-size:11.0pt'>A Member may terminate the Member’s
+<p class=MsoNormal><span style='font-size:11.0pt'>A Member may terminate the Members
 User Account at any time by sending an email to Kickbak from his/her account
-email address. Following the termination of a Member’s User Account, Kickbak
+email address. Following the termination of a Members User Account, Kickbak
 reserves the right to retain User Account information, including personal
 information of the Member, for a reasonable period of time before deleting such
 information.</span></p>
@@ -319,7 +322,7 @@ extent of participation in the program.</span></p>
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;&nbsp;&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>A User Account may be closed
-at Kickbak’s discretion if no Reward Points or Prize Points are accrued during
+at Kickbaks discretion if no Reward Points or Prize Points are accrued during
 a twelve (12) month period. All points in the User Accunt will be forfeited at
 that time.</span></p>
 
@@ -336,7 +339,7 @@ and/or legal action.</span></p>
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>The Program is in no way
-affiliated with or sponsored by Apple Inc. (“<b>Apple</b>”) or any mobile phone
+affiliated with or sponsored by Apple Inc. (<b>Apple</b>) or any mobile phone
 vendor. Apple products will not at any time be made available as Rewards or
 Prizes in the Program.</span></p>
 
@@ -351,7 +354,7 @@ responsibility of the Member.</span></p>
 <p class=MsoNormal><span style='font-size:11.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt'>By registering in the Program,
-each Member agrees that Kickbak and each of Kickbak’s respective agents,
+each Member agrees that Kickbak and each of Kickbaks respective agents,
 representatives, parent companies, affiliates, subsidiaries, and legal
 advisors, and each of its respective employees, shareholders, officers, and
 directors are not responsible or liable for, and shall be released and held
