--- a/assets/www/term_of_service.htm
+++ b/assets/www/term_of_service.htm
@@ -101,7 +101,7 @@ style='font-size:11.0pt;font-family:"Times New Roman"'>KICKBAK TERMS OF SERVICE<
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>[<b>Last
-updated on Aug 15, 2012]<a name="_GoBack"></a></b></span></p>
+updated on Feb 18, 2013]<a name="_GoBack"></a></b></span></p>
 
 <p class=MsoNormal><b><span style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></b></p>
 
@@ -109,14 +109,14 @@ updated on Aug 15, 2012]<a name="_GoBack"></a></b></span></p>
 style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></b></a></a></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>GetKickbak
-Inc. (“<b>Kickbak</b>”, “<b>we</b>”, “<b>us</b>” and terms of similar meaning)
+Inc. (<b>Kickbak</b>, <b>we</b>, <b>us</b> and terms of similar meaning)
 provides this web site (this site and any applications or other software
-provided by Kickbak, for use with the site or otherwise, the “<b>Site</b>”) to
-you subject to these terms of service (these “<b>Terms</b>”) and the Kickbak
-Customer Rewards Program Rules (the “<b>Program Rules</b>”), found at <a
+provided by Kickbak, for use with the site or otherwise, the <b>Site</b>) to
+you subject to these terms of service (these <b>Terms</b>) and the Kickbak
+Customer Rewards Program Rules (the <b>Program Rules</b>), found at <a
 href="http://www.getkickbak.com/terms">www.getkickbak.com/terms</a> hereby
 expressly incorporated within.&nbsp; In these Terms we describe users of the
-Site, whether registered or not, as “<b>Users</b>”. </span></p>
+Site, whether registered or not, as <b>Users</b>. </span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></p>
 
@@ -140,7 +140,7 @@ continued use of the Site after such time will constitute your acceptance of
 such changes or modifications. You should from time to time review the Terms
 and any policies and documents incorporated in them to understand the terms and
 conditions that apply to your use of the Site. The Terms will always show the
-‘last updated’ date at the top. &nbsp;If you do not agree to any amended Terms,
+last updated date at the top. &nbsp;If you do not agree to any amended Terms,
 you must stop using the Site.&nbsp; If you have any questions about the Terms,
 please email us at the contact address below.</span></p>
 
@@ -163,7 +163,7 @@ Policy</span></b></p>
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>Please
 refer to Kickbak's privacy policy, available at <a
 href="http://www.getkickbak.com/privacy">www.getkickbak.com/privacy</a><b> </b>(the
-“<b>Privacy Policy</b>”) for information on how Kickbak collects, uses and
+<b>Privacy Policy</b>) for information on how Kickbak collects, uses and
 discloses personally identifiable information from users of the Site, and which
 is expressly incorporated into these Terms. By using the Site you agree to our
 use, collection and disclosure of personally identifiable information in
@@ -182,7 +182,7 @@ Data; Account Security</span></b></p>
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>If
 you register for an account on the Site, you agree to (a) provide accurate,
 current and complete information as may be prompted by any registration forms
-on the Site (“<b>Registration Data</b>”); (b) maintain the security of your
+on the Site (<b>Registration Data</b>); (b) maintain the security of your
 password; (c) maintain and promptly update the Registration Data, and any other
 information you provide to the Site, and to keep it accurate, current and
 complete; and (d) accept all risks of unauthorized access to the Registration
@@ -219,8 +219,8 @@ Copyright and Trademarks</span></b></p>
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>In
 these Terms the content on the Site, including all information, data, logos,
 marks, designs, graphics, pictures, sound files, other files, and their selection
-and arrangement, is called “<b>Content</b>”.&nbsp; Content provided by Users is
-called “<b>User Content</b>”. User Content is that User’s property. &nbsp;Kickbak’s
+and arrangement, is called <b>Content</b>.&nbsp; Content provided by Users is
+called <b>User Content</b>. User Content is that Users property. &nbsp;Kickbaks
 only right to that User Content is the limited licenses to it granted in these
 Terms.&nbsp; </span></p>
 
@@ -314,7 +314,7 @@ of the Site</span></b></p>
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>The
 Site may contain areas accessible to the public or registered Users in which
 you or third parties may post photographs or other content, messages, materials
-or other items (“<b>Interactive Areas</b>”). You are solely responsible for
+or other items (<b>Interactive Areas</b>). You are solely responsible for
 your use of such Interactive Areas and use them at your own risk. User Content
 submitted to any area of the Site accessible to other Users will be considered
 non-confidential.&nbsp; By using any Interactive Areas, you expressly agree not
@@ -438,8 +438,8 @@ to Other Sites</span></b></p>
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>The
-Site may contain links to third-party Web sites (“<b>Third-Party Sites</b>”)
-and third-party content (“<b>Third-Party Content</b>”) as a service to those
+Site may contain links to third-party Web sites (<b>Third-Party Sites</b>)
+and third-party content (<b>Third-Party Content</b>) as a service to those
 interested in this information. You use links to Third-Party Sites, and any
 Third-Party Content or service provided there at your own risk. Kickbak does
 not monitor or have any control over, and makes no claim or representation
@@ -486,7 +486,7 @@ Disclaimer</span></b></a></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>The
 Site, the Content and the services provided by the Site are provided to you on
-an “as is” basis without warranties from Kickbak of any kind, either express or
+an as is basis without warranties from Kickbak of any kind, either express or
 implied. Kickbak expressly disclaims all other warranties, express or implied,
 including without limitation implied warranties of merchantability, fitness for
 a particular purpose, title and non-infringement. Kickbak does not represent or
@@ -517,7 +517,7 @@ waive and shall not assert any claims or allegations of any nature whatsoever
 against Kickbak, its respective affiliates or subsidiaries, sponsors,
 contractors, advertisers, vendors or other partners, any of its successors or
 assigns, or any of their respective officers, directors, agents or employees
-(collectively, the “<b>Released Parties</b>”) arising out of or in any way relating
+(collectively, the <b>Released Parties</b>) arising out of or in any way relating
 to your use of the Site or the Content, including, without limitation, any
 claims or allegations relating to the alleged infringement of proprietary
 rights, alleged inaccuracy of Content, or allegations that any Released Party
@@ -583,8 +583,8 @@ review the Site for notices.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>Subject
 to the Privacy Policy, if you send to Kickbak or post on the Site in any public
-area any information, ideas, inventions, concepts, techniques or know-how (“<b>User
-Submissions</b>”), for any purpose, including the developing, manufacturing
+area any information, ideas, inventions, concepts, techniques or know-how (<b>User
+Submissions</b>), for any purpose, including the developing, manufacturing
 and/or marketing or products or services incorporating such information, you
 acknowledge that Kickbak can use the User Submissions without acknowledgement
 or compensation to you, and you waive any claim of ownership or compensation or
@@ -619,7 +619,7 @@ in contract or tort, pursuant to statute or regulation, or otherwise, and
 whether preexisting, present or future) arising out of or relating to (a) these
 Terms; (b) the Site or Content; (c) oral or written statements, advertisements
 or promotions relating to these Terms or to the Site; or (d) the relationships
-that result from these Terms or the Site or Content (collectively, a “<b>Claim</b>”)
+that result from these Terms or the Site or Content (collectively, a <b>Claim</b>)
 will be referred to and determined by a sole arbitrator (to the exclusion of
 the courts).&nbsp; Except where prohibited by applicable law, you waive any
 right you may have to commence or participate in any class action against Kickbak
@@ -749,10 +749,10 @@ notices, have been and shall be drawn up in the English language only. </span></
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>Les
-parties reconnaissent avoir convenue que la présente convention ainsi que tous
-documents, avis et procédures judiciaires qui pourront être exécutés, donnés ou
-intentées à la suite des présentes ou ayant un rapport, direct ou indirect,
-avec la présente convention soient rédigée en anglais.</span></p>
+parties reconnaissent avoir convenue que la prsente convention ainsi que tous
+documents, avis et procdures judiciaires qui pourront tre excuts, donns ou
+intentes  la suite des prsentes ou ayant un rapport, direct ou indirect,
+avec la prsente convention soient rdige en anglais.</span></p>
 
 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Times New Roman"'>&nbsp;</span></p>
 
