--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,6 +6,7 @@
       <meta property="fb:app_id" content="197968780267830"/>
       <meta name="format-detection" content="telephone=no" />
       <meta name="format-detection" content="email=no" />
+      <meta name="format-detection" content="address=no" />
       <!-- Default Fontsize = 11px
       iPad @132dpi = 100% - iPhone @163dpi = 114% - iPhone Retina @326dpi = 228%
       -->
@@ -104,7 +105,7 @@
 
          var hostRoot = "";
          //"/assets/www/";
-         var _appPath = hostRoot + "app", _extPath = hostRoot + 'lib/sencha-touch-2.1.0-commercial/src';
+         var _appPath = hostRoot + "app", _extPath = hostRoot + 'lib/touch-2.1.1/src';
          var _appId = "197968780267830";
          var _application;
 
