--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -79,7 +79,7 @@
                Ext.create('Genesis.view.Viewport');
                //this.redirectTo('');
                console.log("Launched App");
-               navigator.splashscreen.hide();
+               //navigator.splashscreen.hide();
             }
          }
       </script>
