--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -2,8 +2,6 @@
 <html>
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-      <meta property="fb:admins" content="725565520"/>
-      <meta property="fb:app_id" content="197968780267830"/>
       <meta name="format-detection" content="telephone=no" />
       <meta name="format-detection" content="email=no" />
       <meta name="format-detection" content="address=no" />
@@ -27,7 +25,8 @@
       <script src="http://192.168.0.52:8081/target/target-script-min.js#client"></script>
       Phone Gap Libs
       -->
-      <script type="text/javascript" src="lib/cordova-2.3.0.android.js"></script>
+      <script type="text/javascript" src="lib/gibberish-aes.min.js"></script>
+      <script type="text/javascript" src="lib/cordova-2.6.0.android.js"></script>
       <script type="text/javascript" src="lib/core/PushNotification.android.js"></script>
       <!-- Debug Javascript on mobile browser -->
       <script type="text/javascript" src="lib/sencha-touch-all.js"></script>
@@ -38,7 +37,7 @@
          function _onGotoMainCallBackFn()
          {
             Ext.Viewport.setMasked(null);
-            var viewport = _application.getController('client.Viewport');
+            var viewport = _application.getController('client' + '.Viewport');
             if (viewport)
             {
                viewport.resetView();
@@ -72,7 +71,7 @@
          {
             if (launched == 0x111)
             {
-               var viewport = _application.getController('client.Viewport');
+               var viewport = _application.getController('client' + '.Viewport');
                viewport.appName = appName;
 
                //console.log("Launching App");
@@ -80,6 +79,7 @@
                //this.redirectTo('');
                console.log("Launched App");
                //navigator.splashscreen.hide();
+               initPushwoosh();
             }
          }
       </script>
@@ -93,20 +93,9 @@
          var merchantMode = false;
          var appName = 'GetKickBak';
          
-         var pushNotifAppName = 'KickBak Production';
-         var pushNotifAppId = '4fef6fb0691c12.54726991';
-         var pushNotifProjectId = '733275653511';
-         /*
-         var pushNotifAppName = 'KickBak Dev Latest';
-         var pushNotifAppId = '93D8A-5BE72';
-         var pushNotifProjectId = '658015469194';
-         */
-         var pushNotifType = 3;
-
          var hostRoot = "";
          //"/assets/www/";
          var _appPath = hostRoot + "app", _extPath = hostRoot + 'lib/touch-2.1.1/src';
-         var _appId = "197968780267830";
          var _application;
 
          // If you want to prevent dragging, uncomment this section
@@ -165,7 +154,7 @@
             {
                if (_application && (launched == 0x111) && !pausedDisabled)
                {
-                  _application.getController('client.Viewport').persistSyncStores();
+                  _application.getController('client' + '.Viewport').persistSyncStores();
                   console.log("App is Paused");
                }
             }, false);
@@ -192,7 +181,7 @@
             // add back button listener
             function onBackKeyDown(e)
             {
-               var viewport = _application.getController('client.Viewport');
+               var viewport = _application.getController('client' + '.Viewport');
 
                //e.preventDefault();
 
@@ -252,9 +241,8 @@
 
                console.log("PhoneGap App Launch");
                launched = 0x110;
-               initPushwoosh();
-               document.addEventListener("backbutton", onBackKeyDown, false);
                _appLaunch();
+               document.addEventListener("backbutton", onBackKeyDown, false);
             }, false);
 
             // Fix for problem  with android 3.x and 4.x which is
