--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -85,27 +85,23 @@
          }
       </script>
       <script type="text/javascript">
-         var launched = 0x000, pausedDisabled = true;
-         var backBtnCallbackListFn = [];
+         var launched = 0x000, pausedDisabled = true, backBtnCallbackListFn = [], offlineDialogShown = false, phoneGapAvailable = true;
+         var debugMode = false, serverHost, merchantMode = false, _application;
+         var appName = 'GetKickBak', _appPath = "app", _extPath = 'lib/touch-2.1.1/src';
          
-         var offlineDialogShown = false;
-         var phoneGapAvailable = true;
-         var debugMode = false;
-         var serverHost;
-         //serverHost = 'http://192.168.0.52:3000';
-         //serverHost = 'http://192.168.0.46:3000';
-		 //serverHost = 'http://76.10.173.153';
-		 //serverHost = 'http://www.dev1getkickbak.com';
-		 //serverHost = 'http://www.devgetkickbak.com';
-		 serverHost = 'http://www.getkickbak.com';
-         var merchantMode = false;
-         var appName = 'GetKickBak';
+         if (debugMode)
+         {
+            //serverHost = 'http://192.168.0.52:3000';
+            //serverHost = 'http://192.168.0.46:3000';
+            //serverHost = 'http://76.10.173.153';
+            serverHost = 'http://www.dev1getkickbak.com';
+            //serverHost = 'http://www.devgetkickbak.com';
+         }
+         else
+         {
+            serverHost = 'http://www.getkickbak.com';            
+         }
          
-         var hostRoot = "";
-         //"/assets/www/";
-         var _appPath = hostRoot + "app", _extPath = hostRoot + 'lib/touch-2.1.1/src';
-         var _application;
-
          // If you want to prevent dragging, uncomment this section
          /*
           function preventBehavior(e)
