--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -10,15 +10,10 @@
       -->
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <title>KickBak</title>
-      <link rel="stylesheet" type="text/css" media="only screen and (max-height:640px) and (-webkit-max-device-pixel-ratio: 0.99)" href="resources/css/android-phone-lhdpi.css">
-      <link rel="stylesheet" type="text/css" media="only screen and (max-height:640px) and (-webkit-device-pixel-ratio: 1.0)" href="resources/css/android-phone-mxhdpi.css">
-      <link rel="stylesheet" type="text/css" media="only screen and (max-height:640px) and (-webkit-max-device-pixel-ratio: 1.99)" href="resources/css/android-phone-lhdpi.css">
-      <link rel="stylesheet" type="text/css" media="only screen and (max-height:640px) and (-webkit-min-device-pixel-ratio: 2.0)" href="resources/css/android-phone-mxhdpi.css">
-
-      <link rel="stylesheet" type="text/css" media="only screen and (min-height:641px) and (-webkit-max-device-pixel-ratio: 0.99)" href="resources/css/android-tablet-lhdpi.css">
-      <link rel="stylesheet" type="text/css" media="only screen and (min-height:641px) and (-webkit-device-pixel-ratio: 1.0)" href="resources/css/android-tablet-mxhdpi.css">
-      <link rel="stylesheet" type="text/css" media="only screen and (min-height:641px) and (-webkit-max-device-pixel-ratio: 1.99)" href="resources/css/android-tablet-lhdpi.css">
-      <link rel="stylesheet" type="text/css" media="only screen and (min-height:641px) and (-webkit-min-device-pixel-ratio: 2.0)" href="resources/css/android-tablet-mxhdpi.css">
+      <link rel="stylesheet" type="text/css" media="only screen and (-webkit-max-device-pixel-ratio: 0.99)" href="resources/css/android-phone-lhdpi.css">
+      <link rel="stylesheet" type="text/css" media="only screen and (-webkit-device-pixel-ratio: 1.0)" href="resources/css/android-phone-mxhdpi.css">
+      <link rel="stylesheet" type="text/css" media="only screen and (-webkit-max-device-pixel-ratio: 1.99)" href="resources/css/android-phone-lhdpi.css">
+      <link rel="stylesheet" type="text/css" media="only screen and (-webkit-min-device-pixel-ratio: 2.0)" href="resources/css/android-phone-mxhdpi.css">
       <!-- If your application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www
       directory and include it here -->
       <script type="text/javascript">
@@ -153,7 +148,6 @@
                console.debug("PhoneGap App Launch");
                launched = 0x110;
                _appLaunch();
-               document.addEventListener("backbutton", onBackKeyDown, false);
             }, false);
 
             // Fix for problem  with android 3.x and 4.x which is
@@ -182,7 +176,7 @@
                'client.CheckinExplore', 'LoginPage', 'SignInPage', 'client.MainPage', 'widgets.client.RedeemItemDetail', 'client.Badges', 'client.JackpotWinners', 'client.MerchantAccount',
                // //
                'client.MerchantDetails', 'client.Accounts', 'client.Prizes', 'Viewport'],
-               controllers : ['mobileClient.Challenges', 'client.Rewards', 'client.Redemptions', //
+               controllers : ['client.Challenges', 'client.Rewards', 'client.Redemptions', //
                'client.Viewport', 'client.MainPage', 'client.Badges', 'client.Merchants', 'client.Accounts', 'client.Settings', 'client.Checkins', 'client.JackpotWinners', 'client.Prizes'],
                launch : function()
                {
@@ -196,6 +190,7 @@
                      launched = 0x001;
                   }
                   console.debug("Ext App Launch")
+                  document.addEventListener("backbutton", onBackKeyDown, false);
                   _appLaunch();
                },
                appFolder : _appPath,
