--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -17,6 +17,9 @@
       <!-- If your application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www
       directory and include it here -->
       <script type="text/javascript">
+         _build = "MobileClientNative";
+      </script>
+      <script type="text/javascript">
          var launched = 0x000, pausedDisabled = true, backBtnCallbackListFn = [], offlineDialogShown = false, phoneGapAvailable = true;
          var appName = 'GetKickBak', _appPath = "app", _extPath = 'lib/touch-2.1.1/src', serverHost, merchantMode = false, _application, _filesAssetCount = 0;
          var debugMode = false;
