--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -22,7 +22,7 @@
       <script type="text/javascript">
          var launched = 0x000, pausedDisabled = true, backBtnCallbackListFn = [], offlineDialogShown = false, phoneGapAvailable = true;
          var appName = 'GetKickBak', _appPath = "app", _extPath = 'lib/touch-2.1.1/src', serverHost, merchantMode = false, _application, _filesAssetCount = 0;
-         var debugMode = false;
+         var debugMode = true;
          
          if (debugMode)
          {
@@ -53,7 +53,6 @@
             }
          }
       </script>
-      <script type="text/javascript" src="lib/gibberish-aes.min.js"></script>
       <script type="text/javascript" src="lib/cordova-2.8.1.android.js"></script>
       <script type="text/javascript" src="lib/sencha-touch-all.js"></script>
       
